# sistema-pos

./: .cz.yaml  .env.development  .env.production  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  bd.md  folder-estructure.md  main.py  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0421ea15938e_init_models.py  12c7157c5037_fix_relacion_modulos_usuarios.py  24fd53a6eb4e_fix_modelos.py  58378ef2de5a_soperes_nene_abajo.py  62eeca833189_crea_modelos.py  6e4f13a2c1a7_productos_codigo_barras_y_categorias.py  757271bdc879_crea_modulos.py  955aaf7237e8_crea_usuarios_y_roles.py  bc99fab74544_crea_tablass.py  c23ff16f5e5f_initial_migration.py  e82a395fdb0c_add_caja_diaria_foreign_key_to_egresos.py  ee94f662f8fb_crea_modelos.py  f1f9cfcb82a8_crea_usuarios_y_roless.py
app/: main.py
app/components/: __init__.py  appbar.py  counter.py  drawer.py  login.py  register.py  sidebar.py
app/controllers/: __init__.py  auth_controller.py  home_controller.py  login.py  register.py  user_controller.py
app/core/: auth_middleware.py  change_theme.py  config.py  theme_config.py
app/database/: __init__.py  connection.py  init_db.py
app/database/models/: productos.py  usuarios.py
app/models/: __init__.py  caja.py  categorias.py  categorias_tipos_gastos.py  cierres_caja.py  clientes.py  compras.py  creditos.py  egresos.py  entidades.py  enums.py  gastos.py  imagenes.py  lista_precios.py  listas_precios.py  methods.py  modulos.py  movimientos.py  productos.py  proveedores.py  usuarios.py  ventas.py
app/views/: dashboard.py  home.py  index.py  login.py  register.py
database/: __init__.py  backup_script.py  connection.py
database/models/: base.py  usuarios.py
src/: main.py  main2.py
src/components/: login.py
src/database/: __init__.py  backup_script.py  connection.py
src/database/models/: base.py  productos.py  usuarios.py
src/models/: models.py
src/views/: counter.py  share.py
