[tool.poetry]
name = "sistema-pos"
version = "0.1.0"
description = "Sistema punto de venta"
authors = ["tomiban <tbanchio15@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
flet = "*"
sqlalchemy = "*"
alembic = "*"
mysql-connector-python = "*"
python-dotenv = "*"
fpdf = "*"
pandas = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
flake8 = "*"
isort = "*"

[tool.poetry.scripts]
start = "src.main:main"
format = "black:main"
lint = "flake8:main"
test = "pytest:main"